src/test/ui/const-generics/cannot-infer-type-for-const-param.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/cannot-infer-type-for-const-param.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^

error[E0282]: type annotations needed
  --> $DIR/cannot-infer-type-for-const-param.rs:10:19
   |
LL |     let _ = Foo::<3>([1, 2, 3]);
   |                   ^ cannot infer type for `{integer}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
